# winfont

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
fonts/: tektite16x9.fd  tektite16x9oem.fd
python/: dewinfont.py  mkwinfont.py
src/winfont/: dewinfont.py  fd.py  fnt.py  fon.py  fon2json.py  helpers.py  mkwinfont.py  models.py  util.py
tests/: test_winfont.py
