[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "winfont"
version = "0.0.0"

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
extend-select = [
    "B",
    "COM",
    "D",
    "I",
    "UP",
]
extend-ignore = [
    "D100",
    "D101",
    "D103",
    "D104",
    "D211",
    "D212",
]
